--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.LocationFragment">
+    tools:context=".ui.location.LocationFragment">
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
