--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.depo.trask.fragments.HomeFragment"
+        android:name="com.depo.trask.ui.home.HomeFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
 
@@ -22,32 +22,32 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.depo.trask.fragments.LoginFragment"
+        android:name="com.depo.trask.ui.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
     <fragment
         android:id="@+id/containerShippingFragment"
-        android:name="com.depo.trask.fragments.ContainerShippingFragment"
+        android:name="com.depo.trask.ui.containershipping.ContainerShippingFragment"
         android:label="@string/container"
         tools:layout="@layout/fragment_container_shipping" />
     <fragment
         android:id="@+id/locationFragment"
-        android:name="com.depo.trask.fragments.LocationFragment"
+        android:name="com.depo.trask.ui.location.LocationFragment"
         android:label="@string/location"
         tools:layout="@layout/fragment_location" />
     <fragment
         android:id="@+id/historyFragment"
-        android:name="com.depo.trask.fragments.HistoryFragment"
+        android:name="com.depo.trask.ui.history.HistoryFragment"
         android:label="@string/history"
         tools:layout="@layout/fragment_history" />
     <fragment
         android:id="@+id/aboutFragment"
-        android:name="com.depo.trask.fragments.AboutFragment"
+        android:name="com.depo.trask.ui.about.AboutFragment"
         android:label="@string/about"
         tools:layout="@layout/fragment_about" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.depo.trask.fragments.SettingsFragment"
+        android:name="com.depo.trask.ui.settings.SettingsFragment"
         android:label="@string/settings" />
     <action
         android:id="@+id/action_global_loginFragment"
