--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,7 +95,7 @@
             app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
 
         <ProgressBar
-            android:id="@+id/progressBarLogin"
+            android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
