--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-
             app:title="@string/app_name" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -37,13 +36,13 @@
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
         app:navGraph="@navigation/nav" />
 
-    <!-- app:labelVisibilityMode="labeled"  -->
+
     <!-- android:background="@android:color/white" -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+     app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
