--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -19,12 +19,25 @@
             app:destination="@id/settingsFragment" />
 
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.depo.trask.ui.settings.SettingsFragment"
+        android:label="@string/settings" />
 
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.depo.trask.ui.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@+id/loginFragment"
+            app:popUpToInclusive="true"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_right"
+            />
+    </fragment>
     <fragment
         android:id="@+id/containerShippingFragment"
         android:name="com.depo.trask.ui.containershipping.ContainerShippingFragment"
@@ -45,16 +58,5 @@
         android:name="com.depo.trask.ui.about.AboutFragment"
         android:label="@string/about"
         tools:layout="@layout/fragment_about" />
-    <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.depo.trask.ui.settings.SettingsFragment"
-        android:label="@string/settings" />
-    <action
-        android:id="@+id/action_global_loginFragment"
-        app:destination="@id/loginFragment"
-        app:launchSingleTop="false"
-        app:popUpTo="@+id/nav_host_fragment"
-        app:popUpToInclusive="true"
-        />
 
 </navigation>
