--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.0.106</domain>
+        <domain includeSubdomains="true">192.168.43.17 </domain>
 <!--        <domain includeSubdomains="true">tsurumaru.co.id</domain>-->
     </domain-config>
 </network-security-config>
