--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -9,8 +9,6 @@
         android:id="@+id/homeFragment"
         android:name="com.depo.trask.ui.home.HomeFragment"
         android:label="@string/app_name"
-        app:popUpTo="@+id/loginFragment"
-        app:popUpToInclusive="true"
         tools:layout="@layout/fragment_home">
 
         <argument android:name="authentication"
@@ -30,7 +28,13 @@
         android:id="@+id/loginFragment"
         android:name="com.depo.trask.ui.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/containerShippingFragment"
         android:name="com.depo.trask.ui.containershipping.ContainerShippingFragment"
@@ -52,12 +56,5 @@
         android:label="@string/about"
         tools:layout="@layout/fragment_about" />
 
-    <action
-        android:id="@+id/action_global_loginFragment"
-        app:destination="@id/loginFragment"
-        app:popUpTo="@+id/homeFragment"
-        app:popUpToInclusive="true"
-
-    />
 
 </navigation>
